# IndustryCheck

./: CMakeLists.txt  README.md  REMAME.md
include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  ObsoleteCamParams.h
src/: IndustryCheck.cpp  IndustryCheck.h  IndustryCheck.ui  MvCamera.cpp  MvCamera.h  cropRoi.cpp  cropRoi.h  cropbox.cpp  cropbox.h  cropbox.ui  main.cpp  myThread.cpp  myThread.h
